Shift accent image right to avoid overlapping title text

--- a/style.css
+++ b/style.css
@@ -386,8 +386,8 @@ a {
 
 @media screen and (min-width: 900px) {
     .home-hero__accent-image {
-        grid-column: 9 / span 4;
-        grid-row: 2 / span 5;
+        grid-column: 10 / span 3;
+        grid-row: 2 / span 4;
         aspect-ratio: .8;
     }
 }
